--- a/foundations/03-grouping-selectors/index.html
+++ b/foundations/03-grouping-selectors/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <button>Click Me!</button>
-  <button>No, Click Me!</button>
+  <button class="lb">Click Me!</button>
+  <button class="rb">No, Click Me!</button>
 </body>
 </html>
